# Geomag

./: LICENSE  PRIVACY.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/arm64-v8a/: libigrf.h  libwmm.h
app/libs/armeabi-v7a/: libigrf.h  libwmm.h
app/schemas/com.sanmer.geomag.data.database.AppDatabase/: 1.json
app/schemas/com.sanmer.geomag.database.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  geomag.cpp  geomag.h  igrf-jni.cpp  logging.h  wmm-jni.cpp
app/src/main/golang/: .gitignore  build-android.sh  build.py  go.mod  go.sum
app/src/main/golang/igrf/: main.go
app/src/main/golang/wmm/: main.go
app/src/main/res/drawable/: arrow_up_bold.xml  box_time_outline.xml  chart_outline.xml  clock_bold.xml  clock_outline.xml  code_outline.xml  edit_bold.xml  edit_outline.xml  gps_outline.xml  gps_slash_outline.xml  hashtag_outline.xml  ic_launcher_outline.xml  ic_logo.xml  location_cross_outline.xml  location_outline.xml  location_slash_outline.xml  message_text_bold.xml  message_text_outline.xml  note_bold.xml  pause_outline.xml  play_bold.xml  play_outline.xml  presention_chart_bold.xml  shortcut_records.xml  stop_bold.xml  stop_outline.xml  tick_outline.xml  (+2 more)
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  AndroidHiltConventionPlugin.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+245 files in other folders)
